[package]
name = "bigbed-wasm"
version = "0.1.0"
authors = ["wowens <wowens@ufl.edu>"]
edition = "2018"
license = "GPL-3.0"

[lib]

crate-type=["cdylib"]

[dependencies]
wasm-bindgen = "0.2.11"
console_error_panic_hook = "0.1.6"
bigbed = "0.2.0"

[dependencies.web-sys]
version="0.3.5"
features = [ 
    "console",
    "HtmlTextAreaElement",
    "Element",
]